// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Choice Snapshot > Checked 1`] = `
<div>
  <div
    class="_Choice_8d554d _ChoiceChecked_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d _ChoiceStateSuccess_8d554d"
    data-testid="choice"
  >
    <div
      class="_ChoiceMark_8d554d"
    />
  </div>
</div>
`;

exports[`Choice Snapshot > DefaultValues 1`] = `
<div>
  <div
    class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
    data-testid="choice"
  >
    <div
      class="_ChoiceMark_8d554d"
    />
  </div>
</div>
`;

exports[`Choice Snapshot > Disabled 1`] = `
<div>
  <div
    class="_Choice_8d554d _ChoiceDisabled_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
    data-testid="choice"
  >
    <div
      class="_ChoiceMark_8d554d"
    />
  </div>
</div>
`;

exports[`Choice Snapshot > Focused 1`] = `
<div>
  <div
    class="_Choice_8d554d _ChoiceFocused_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
    data-testid="choice"
  >
    <div
      class="_ChoiceMark_8d554d"
    />
  </div>
</div>
`;

exports[`Choice Snapshot > Hovered 1`] = `
<div>
  <div
    class="_Choice_8d554d _ChoiceHovered_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
    data-testid="choice"
  >
    <div
      class="_ChoiceMark_8d554d"
    />
  </div>
</div>
`;

exports[`Choice Snapshot > StateError 1`] = `
<div>
  <div
    class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateError_8d554d"
    data-testid="choice"
  >
    <div
      class="_ChoiceMark_8d554d"
    />
  </div>
</div>
`;

exports[`Choice Snapshot > StateIdle 1`] = `
<div>
  <div
    class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
    data-testid="choice"
  >
    <div
      class="_ChoiceMark_8d554d"
    />
  </div>
</div>
`;

exports[`Choice Snapshot > StateSuccess 1`] = `
<div>
  <div
    class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateSuccess_8d554d"
    data-testid="choice"
  >
    <div
      class="_ChoiceMark_8d554d"
    />
  </div>
</div>
`;

exports[`Choice Snapshot > TypeCheckbox 1`] = `
<div>
  <div
    class="_Choice_8d554d _ChoiceTypeCheckbox_8d554d _ChoiceStateIdle_8d554d"
    data-testid="choice"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-check _ChoiceMark_8d554d"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 6 9 17l-5-5"
      />
    </svg>
  </div>
</div>
`;

exports[`Choice Snapshot > TypeRadio 1`] = `
<div>
  <div
    class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
    data-testid="choice"
  >
    <div
      class="_ChoiceMark_8d554d"
    />
  </div>
</div>
`;
